# profiling

./: .gitignore  README.md  analysis_orchestrator.rb  plaintext_to_json_report_converter.rb
analysis visualiser/: README.md  analyser.rb  batch_processing.sh  visualiser.py
analyther profiler/: analyther_report.rb  risultati.json
attack profiler/: attack_profiler.rb  directory_tree.json  esempioWannaCry-180-ON_THE_FLY-4.txt  esempioWannaCry-180-ON_THE_FLY-4_json.json  esempio_base.txt  esempio_testato.txt  input_WannaCry-60-Random  input_profile.base  json_example.json  profile_json.json  reportAnalizer.rb  reportAnalizerCSV.rb  report_analizer.rb  tree_file_analysis.json
attack profiler/provvisorio/: clearSum  esempio_base.txt  reportAnalizerToCSV.rb  reportAnalizer_singolo_file.rb  report_analizer copy 2024-02-06.rb  test.rb
attack_profiler/: attack_profiler.rb
attack_profiler/file_sample/: WannaCry-60-SHADOW_COPY-4-report.json  WannaCry-60-SHADOW_COPY-4.json  (+2 more)
batch_processing/: README.md  analyser_aggregator.rb  attack_profiler.rb  attack_profiler_for_folder.rb  batch_run.sh  pyproject.toml  report_analyser.rb  report_analyser_for_folder.rb  visual_analyser.rb  visualiser.py
provvisorio di supporto/: WannaCry-180-ON_THE_FLY-4.report  WannaCry-60-RANDOM-4.report  WannaCry-60-SHADOW_COPY-4.report
report analyser/: input_example_test_tree_file_analysis.json_analysis copy.json  output_risultati.json  report_analyser.rb  report_analyser_save.rb
report_analyser/: analyser_aggregator.rb  base-0-NONE-analysis.json  esempio_output.json  report_analyser.rb
(+26 files in other folders)
