[tool.poetry]
name = "analysis-visualiser"
version = "0.1.0"
description = ""
authors = [ "Saverio Giallorenzo" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
